--- a/src/pages/Auth/AuthPage.module.css
+++ b/src/pages/Auth/AuthPage.module.css
@@ -400,3 +400,9 @@
 .backtoLoginButton:active:not(:disabled) {
   background-color: #4e555b;
 }
+
+.guideButtonWrapper {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 4px;
+}
